# mbta-collector

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  schema.sql  wrangler.jsonc
migrations/: 001_add_branch_trainnum.sql  002_drop_obs_indexes.sql  003_add_milestones.sql  004_vehicle_arrivals.sql  005_train_status.sql  006_reported_status.sql
python_modules/httpx-0.28.1.dist-info/: RECORD
python_modules/idna-3.17.dist-info/: RECORD
python_modules/idna-3.18.dist-info/: RECORD
scripts/: backup-d1.sh  export-replay.py
src/: disruption.py  entry.py  mbta.py  predictor.py  sql.py  timeutil.py  ui.py
tests/: test_disruption.py  test_parsers.py  test_predictor.py  test_timeutil.py
tests/fixtures/: alerts.json  predictions_north.json  schedules_north.json  schedules_ruggles.json  system_predictions.json
web/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js
web/public/replay/: 2026-06-05.json  2026-06-09.json  index.json
web/src/: App.jsx  ReloadPrompt.jsx  SWUpdate.jsx  StationPicker.jsx  api.js  main.jsx  styles.css  useAnimatedMarkers.js  watches.js
web/src/views/: DisruptionView.jsx  LinesView.jsx  MapView.jsx  PlatformsView.jsx  ReplayView.jsx  StationsView.jsx
